Inbound properties passando dados para o componente

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<ap-photo></ap-photo>
+<ap-photo url = 'https://http2.mlstatic.com/resident-evil-4-pc-completo-legendado-portugus-c-brinde-D_NQ_NP_643205-MLB26510344008_122017-F.jpg' description = 'RE4'></ap-photo>
+<ap-photo url = 'http://proximonivel.pt/wp-content/uploads/2016/12/resident-evil-5-remaster-rev-top-pn.jpg' description = 'RE5'></ap-photo>
